--- a/docstatus.html
+++ b/docstatus.html
@@ -22,7 +22,7 @@
 <br>
 <hr>
 <br>
-<h1 id=user>User Guide Status to Version 3.9 Dt:August 07th 2023</h1>
+<h1 id=user>User Guide Status to Version 3.9 Dt:August 10th 2023</h1>
 <h2> In progress: in the first column</h2>
 
 <table cellspacing="0" border="1">
@@ -1534,12 +1534,12 @@
 		<td align="left"></td>
 		<td align="left" class="title" colspan="2">JAR libraries</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/guide/jar/index.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/guide/jar/index.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/guide/jar/index.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./pt/html/guide/jar/index.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./ru/html/guide/jar/index.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./he/html/guide/jar/index.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/jar/index.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/guide/jar/index.html">_V</a></td>
+		<td align="center" class="good"><a href="./de/html/guide/jar/index.html">__</a></td>
+		<td align="center" class="good"><a href="./pt/html/guide/jar/index.html">__</a></td>
+		<td align="center" class="good"><a href="./ru/html/guide/jar/index.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/jar/index.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -1551,12 +1551,12 @@
 		<td align="left"></td>
 		<td align="left">Gray Code Incrementer</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/guide/jar/incr.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/guide/jar/incr.html">_T</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/guide/jar/incr.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./pt/html/guide/jar/incr.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./ru/html/guide/jar/incr.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./he/html/guide/jar/incr.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/jar/incr.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/guide/jar/incr.html">_V</a></td>
+		<td align="center" class="good"><a href="./de/html/guide/jar/incr.html">__</a></td>
+		<td align="center" class="good"><a href="./pt/html/guide/jar/incr.html">__</a></td>
+		<td align="center" class="good"><a href="./ru/html/guide/jar/incr.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/jar/incr.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -1568,12 +1568,12 @@
 		<td align="left"></td>
 		<td align="left">Library Class</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/guide/jar/library.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/guide/jar/library.html">_T</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/guide/jar/library.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./pt/html/guide/jar/library.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./ru/html/guide/jar/library.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./he/html/guide/jar/library.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/jar/library.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/guide/jar/library.html">_V</a></td>
+		<td align="center" class="good"><a href="./de/html/guide/jar/library.html">__</a></td>
+		<td align="center" class="good"><a href="./pt/html/guide/jar/library.html">__</a></td>
+		<td align="center" class="good"><a href="./ru/html/guide/jar/library.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/jar/library.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -1585,12 +1585,12 @@
 		<td align="left"></td>
 		<td align="left">Simple Gray Code Counter</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/guide/jar/simpctr.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/guide/jar/simpctr.html">_T</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/guide/jar/simpctr.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./pt/html/guide/jar/simpctr.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./ru/html/guide/jar/simpctr.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./he/html/guide/jar/simpctr.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/jar/simpctr.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/guide/jar/simpctr.html">_V</a></td>
+		<td align="center" class="good"><a href="./de/html/guide/jar/simpctr.html">__</a></td>
+		<td align="center" class="good"><a href="./pt/html/guide/jar/simpctr.html">__</a></td>
+		<td align="center" class="good"><a href="./ru/html/guide/jar/simpctr.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/jar/simpctr.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -1602,12 +1602,12 @@
 		<td align="left"></td>
 		<td align="left">Gray Code Counter</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/guide/jar/counter.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/guide/jar/counter.html">_T</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/guide/jar/counter.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./pt/html/guide/jar/counter.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./ru/html/guide/jar/counter.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./he/html/guide/jar/counter.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/jar/counter.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/guide/jar/counter.html">_V</a></td>
+		<td align="center" class="good"><a href="./de/html/guide/jar/counter.html">__</a></td>
+		<td align="center" class="good"><a href="./pt/html/guide/jar/counter.html">__</a></td>
+		<td align="center" class="good"><a href="./ru/html/guide/jar/counter.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/jar/counter.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -1619,12 +1619,12 @@
 		<td align="left"></td>
 		<td align="left">Guidelines</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/guide/jar/guide.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/guide/jar/guide.html">_T</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/guide/jar/guide.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./pt/html/guide/jar/guide.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./ru/html/guide/jar/guide.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./he/html/guide/jar/guide.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/guide/jar/guide.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/guide/jar/guide.html">_V</a></td>
+		<td align="center" class="good"><a href="./de/html/guide/jar/guide.html">_C</a></td>
+		<td align="center" class="good"><a href="./pt/html/guide/jar/guide.html">_C</a></td>
+		<td align="center" class="good"><a href="./ru/html/guide/jar/guide.html">_C</a></td>
+		<td align="center" class="good"><a href="./he/html/guide/jar/guide.html">_C</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
