--- a/fr/html/guide/prefs/pref-cmdline.html
+++ b/fr/html/guide/prefs/pref-cmdline.html
@@ -200,7 +200,7 @@
         </dt>
         <dd>
           <p>
-            Exécute les tests de <b>circuitname</b> dans <b>projectfile</b> en focntion des vecteurs dans <b>vectorfile</b>. Plus d'information dans <a href="../verify/test.html">Fenêtre Vecteur de test</a>
+            Exécute les tests de <b>circuitname</b> dans <b>projectfile</b> en fonction des vecteurs dans <b>vectorfile</b>. Plus d'information dans <a href="../verify/test.html">Fenêtre Vecteur de test</a>
           </p>
         </dd>
         <dt>
