--- a/libstatus.html
+++ b/libstatus.html
@@ -138,7 +138,7 @@
 		<td align="center" class="nonexist"><a href="./de/html/libs/wiring/pin.html">__</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/libs/wiring/pin.html">_C</a></td>
 		<td align="center" class="needtask"><a href="./ru/html/libs/wiring/pin.html">_C</a></td>
-		<td align="center" class="notverif"><a href="./he/html/libs/wiring/pin.html">__</a></td>
+		<td align="center" class="needtask"><a href="./he/html/libs/wiring/pin.html">_C</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
