--- a/he/html/guide/verify/sub.html
+++ b/he/html/guide/verify/sub.html
@@ -84,22 +84,23 @@
         הוחלף במעגל הבדיקה בזה של <tt><b>query.circ</b></tt> שגוי.
     </p>
     <blockquote>
-         <pre>00 00 0E0
-01 00 0E1
-10 00 EE0
-11 00 EE1
-00 01 0E1
-01 01 0E0
-10 01 EE1
-11 01 EE0
-00 10 EE0
-01 10 EE1
-10 10 1E0
-11 10 1E1
-00 11 EE1
-01 11 EE0
-10 11 1E1
-11 11 1E0
+         <pre>a  b sum
+00 00 000
+00 01 001
+00 10 010
+00 11 011
+01 00 001
+01 01 000
+01 10 011
+01 11 010
+10 00 010
+10 01 011
+10 10 100
+10 11 101
+11 00 011
+11 01 010
+11 10 101
+11 11 100
 </pre>
     </blockquote>
     <p>
